# ruleboost

./: README.md  pyproject.toml  requirements.txt  ruleboost.py
spikes/: background_rule.ipynb  classification.ipynb  incremental.ipynb  numba_opt.ipynb  numba_pitfalls.ipynb  optikon_interface.ipynb  polymorphic_baselearners.ipynb  polymorphism.ipynb  polymorphism2.ipynb  shrinkage.ipynb
